--- a/Java-从0开始（基础）/25.函数式编程/函数式编程基础.md
+++ b/Java-从0开始（基础）/25.函数式编程/函数式编程基础.md
@@ -255,7 +255,111 @@ A：
 ## Stream API 的基本使用方法
 
 1. 创建 Stream
-2. 
+
+    1. 使用 `Stream.of()` 方法
+
+        ```java
+        Stream<String> stream = Stream.of("A", "B", "C", "D");
+        stream.forEach(System.out::println); // 为Stream中的每个元素调用printIn方法
+        ```
+
+    2. 把现有的集合类通过其 `stream()` 方法转为 Stream
+
+        ```java
+        Stream<String> s1 = Arrays.stream(new String[]{"A","D","E"}); // 基于Arrays构造
+        Stream<String> s2 = List.of("B","C").stream();  // 基于 List 构造
+        s1.forEach(System.out::println);
+        s2.forEach(System.out::println);
+        ```
+
+        -   **注**：由于基本类型没有对应的泛型类型，为了要使用对应的 Stream，需要对其进行装箱，如使用 `Stream<Integer>`。但装箱拆箱会影响效率，为提高效率，Java 标准库提供了`IntStream`、`LongStream`和`DoubleStream`这三种使用基本类型的`Stream`。它们使用起来和`Stream<T>`没有太大区别。
+
+            ```java
+            // int[]转为IntStream
+            IntStream in = Arrays.stream(new int[] { 1, 2, 3 });
+            // String[]转为LongStream
+            LongStream lo = List.of("1", "2", "3").stream().mapToLong(Long::parseLong);
+            ```
+
+    3. **基于 `Supplier` 接口构造无限序列**：
+
+        1. 编写时：定义一个实现了 `Supplier` 接口的类 A，并重写 `get()` 方法
+        2. 调用时：调用`Stream.generate()`静态方法，并传入类 A 的对象
+
+        ```java
+        // 使用 supplier 实时创建自然数
+        import java.util.function.Supplier;
+        import java.util.stream.Stream;
+        
+        public class App {
+            public static void main(String[] args) throws Exception {
+                Stream<Integer> naturalStream = Stream.generate(new NaturalSupplier());
+                naturalStream.limit(10).forEach(System.out::println); // 使用 limit() 转为有限序列
+            }
+        }
+        
+        class NaturalSupplier implements Supplier<Integer> {
+            int n = 0;
+        
+            @Override
+            public Integer get() { // 需要重写get方法
+                return n++;
+            }
+        }
+        ```
+
+        -   **这种 `Stream` 保存的不是元素，而是算法，可以表示无限序列（这里有点像 Python 中的生成器）**
+        -   基于 Supplier 接口实现的 Stream 是一个无限序列，如果要对其元素进行操作，必须通过 `limit()` 方法将其转为有限序列。
+
+    4. 基于其他的 API，例如：
+
+        1.  `Files`类的`lines()`方法：把一个文件变成一个`Stream`，每个元素代表文件的一行内容
+
+            ```java
+            try (Stream<String> lines = Files.lines(Paths.get("src/test"))) {
+                lines.forEach(System.out::println);
+            } 
+            ```
+
+        2. 正则表达式的`Pattern`对象的`splitAsStream()`方法：把一个长字符串分割成`Stream`序列而不是数组
+
+            ```java
+            Pattern p = Pattern.compile("\\s+");
+            Stream<String> s = p.splitAsStream("This is my best friend.");
+            s.forEach(System.out::println);
+            ```
+
+2. 使用map：map操作是将一种Stream通过一种运算变换到另一种Stream，由 `Stream.map()`方法实现，该方法接受一个 `Function`接口对象。
+
+    1. `Function`的定义是：
+
+        ```java
+        @FunctionalInterface
+        public interface Function<T, R> {
+            // 将T类型转换为R:
+            R apply(T t);
+        }
+        ```
+
+    2. 实例：对字符串使用map操作
+
+        ```java
+        Stream<String> sl = List.of("  Apple ", " pear ", " ORANGE", " BaNaNa ").stream();
+        sl.map(String::trim).map(String::toUpperCase).forEach(System.out::println);
+        ```
+
+        输出：
+
+        ```cmd
+        APPLE
+        PEAR
+        ORANGE
+        BANANA
+        ```
+
+        
+
+
 
 # Reference
 
