--- a/Java-从0开始（基础）/25.函数式编程/函数式编程基础.md
+++ b/Java-从0开始（基础）/25.函数式编程/函数式编程基础.md
@@ -254,110 +254,407 @@ A：
 
 ## Stream API 的基本使用方法
 
-1. 创建 Stream
+### 创建 Stream
 
-    1. 使用 `Stream.of()` 方法
+1. 使用 `Stream.of()` 方法
+
+    ```java
+    Stream<String> stream = Stream.of("A", "B", "C", "D");
+    stream.forEach(System.out::println); // 为Stream中的每个元素调用printIn方法
+    ```
+
+2. 把现有的集合类通过其 `stream()` 方法转为 Stream
+
+    ```java
+    Stream<String> s1 = Arrays.stream(new String[]{"A","D","E"}); // 基于Arrays构造
+    Stream<String> s2 = List.of("B","C").stream();  // 基于 List 构造
+    s1.forEach(System.out::println);
+    s2.forEach(System.out::println);
+    ```
+
+    -   **注**：由于基本类型没有对应的泛型类型，为了要使用对应的 Stream，需要对其进行装箱，如使用 `Stream<Integer>`。但装箱拆箱会影响效率，为提高效率，Java 标准库提供了`IntStream`、`LongStream`和`DoubleStream`这三种使用基本类型的`Stream`。它们使用起来和`Stream<T>`没有太大区别。
 
         ```java
-        Stream<String> stream = Stream.of("A", "B", "C", "D");
-        stream.forEach(System.out::println); // 为Stream中的每个元素调用printIn方法
+        // int[]转为IntStream
+        IntStream in = Arrays.stream(new int[] { 1, 2, 3 });
+        // String[]转为LongStream
+        LongStream lo = List.of("1", "2", "3").stream().mapToLong(Long::parseLong);
         ```
 
-    2. 把现有的集合类通过其 `stream()` 方法转为 Stream
+3. **基于 `Supplier` 接口构造无限序列**：
 
-        ```java
-        Stream<String> s1 = Arrays.stream(new String[]{"A","D","E"}); // 基于Arrays构造
-        Stream<String> s2 = List.of("B","C").stream();  // 基于 List 构造
-        s1.forEach(System.out::println);
-        s2.forEach(System.out::println);
-        ```
+    1. 编写时：定义一个实现了 `Supplier` 接口的类 A，并重写 `get()` 方法
+    2. 调用时：调用`Stream.generate()`静态方法，并传入类 A 的对象
 
-        -   **注**：由于基本类型没有对应的泛型类型，为了要使用对应的 Stream，需要对其进行装箱，如使用 `Stream<Integer>`。但装箱拆箱会影响效率，为提高效率，Java 标准库提供了`IntStream`、`LongStream`和`DoubleStream`这三种使用基本类型的`Stream`。它们使用起来和`Stream<T>`没有太大区别。
-
-            ```java
-            // int[]转为IntStream
-            IntStream in = Arrays.stream(new int[] { 1, 2, 3 });
-            // String[]转为LongStream
-            LongStream lo = List.of("1", "2", "3").stream().mapToLong(Long::parseLong);
-            ```
-
-    3. **基于 `Supplier` 接口构造无限序列**：
-
-        1. 编写时：定义一个实现了 `Supplier` 接口的类 A，并重写 `get()` 方法
-        2. 调用时：调用`Stream.generate()`静态方法，并传入类 A 的对象
-
-        ```java
-        // 使用 supplier 实时创建自然数
-        import java.util.function.Supplier;
-        import java.util.stream.Stream;
-        
-        public class App {
-            public static void main(String[] args) throws Exception {
-                Stream<Integer> naturalStream = Stream.generate(new NaturalSupplier());
-                naturalStream.limit(10).forEach(System.out::println); // 使用 limit() 转为有限序列
-            }
+    ```java
+    // 使用 supplier 实时创建自然数
+    import java.util.function.Supplier;
+    import java.util.stream.Stream;
+    
+    public class App {
+        public static void main(String[] args) throws Exception {
+            Stream<Integer> naturalStream = Stream.generate(new NaturalSupplier());
+            naturalStream.limit(10).forEach(System.out::println); // 使用 limit() 转为有限序列
         }
-        
-        class NaturalSupplier implements Supplier<Integer> {
-            int n = 0;
-        
-            @Override
-            public Integer get() { // 需要重写get方法
-                return n++;
-            }
+    }
+    
+    class NaturalSupplier implements Supplier<Integer> {
+        int n = 0;
+    
+        @Override
+        public Integer get() { // 需要重写get方法
+            return n++;
         }
-        ```
+    }
+    ```
 
-        -   **这种 `Stream` 保存的不是元素，而是算法，可以表示无限序列（这里有点像 Python 中的生成器）**
-        -   基于 Supplier 接口实现的 Stream 是一个无限序列，如果要对其元素进行操作，必须通过 `limit()` 方法将其转为有限序列。
+    -   **这种 `Stream` 保存的不是元素，而是算法，可以表示无限序列（这里有点像 Python 中的生成器）**
+    -   基于 Supplier 接口实现的 Stream 是一个无限序列，如果要对其元素进行操作，必须通过 `limit()` 方法将其转为有限序列。
 
-    4. 基于其他的 API，例如：
+4. 基于其他的 API，例如：
 
-        1.  `Files`类的`lines()`方法：把一个文件变成一个`Stream`，每个元素代表文件的一行内容
-
-            ```java
-            try (Stream<String> lines = Files.lines(Paths.get("src/test"))) {
-                lines.forEach(System.out::println);
-            } 
-            ```
-
-        2. 正则表达式的`Pattern`对象的`splitAsStream()`方法：把一个长字符串分割成`Stream`序列而不是数组
-
-            ```java
-            Pattern p = Pattern.compile("\\s+");
-            Stream<String> s = p.splitAsStream("This is my best friend.");
-            s.forEach(System.out::println);
-            ```
-
-2. 使用map：map操作是将一种Stream通过一种运算变换到另一种Stream，由 `Stream.map()`方法实现，该方法接受一个 `Function`接口对象。
-
-    1. `Function`的定义是：
+    1.  `Files`类的`lines()`方法：把一个文件变成一个`Stream`，每个元素代表文件的一行内容
 
         ```java
-        @FunctionalInterface
-        public interface Function<T, R> {
-            // 将T类型转换为R:
-            R apply(T t);
-        }
+        try (Stream<String> lines = Files.lines(Paths.get("src/test"))) {
+            lines.forEach(System.out::println);
+        } 
         ```
 
-    2. 实例：对字符串使用map操作
+    2. 正则表达式的`Pattern`对象的`splitAsStream()`方法：把一个长字符串分割成`Stream`序列而不是数组
 
         ```java
-        Stream<String> sl = List.of("  Apple ", " pear ", " ORANGE", " BaNaNa ").stream();
-        sl.map(String::trim).map(String::toUpperCase).forEach(System.out::println);
+        Pattern p = Pattern.compile("\\s+");
+        Stream<String> s = p.splitAsStream("This is my best friend.");
+        s.forEach(System.out::println);
+        ```
+
+### 使用 map
+
+map操作是将一种Stream通过一种运算变换到另一种Stream，由 `Stream.map()`方法实现，该方法接受一个 `Function`接口对象。
+
+1. `Function`的定义是：
+
+    ```java
+    @FunctionalInterface
+    public interface Function<T, R> {
+        // 将T类型转换为R:
+        R apply(T t);
+    }
+    ```
+
+2. 实例：对字符串使用map操作
+
+    ```java
+    Stream<String> sl = List.of("  Apple ", " pear ", " ORANGE", " BaNaNa ").stream();
+    sl.map(String::trim).map(String::toUpperCase).forEach(System.out::println);
+    ```
+
+    输出：
+
+    ```cmd
+    APPLE
+    PEAR
+    ORANGE
+    BANANA
+    ```
+
+    
+
+### 使用 filter
+
+`filter()`操作是对一个`Stream`的所有元素一一进行测试，不满足条件的就被“滤掉”了，剩下的满足条件的元素就构成了一个新的`Stream`。`filter()`方法接收的对象是**`Predicate`接口对象**，它定义了一个`test()`方法，负责判断元素是否符合条件。
+
+1. `Predicate` 接口的定义
+
+    ```java
+    @FunctionalInterface
+    public interface Predicate<T> {
+        // 判断元素t是否符合条件:
+        boolean test(T t);
+    }
+    ```
+
+2. 实例：从一组给定的`LocalDate`中过滤出休息日：
+
+    ```java
+    import java.time.DayOfWeek;
+    import java.time.LocalDate;
+    import java.util.function.Supplier;
+    import java.util.stream.Stream;
+    
+    public class App {
+        public static void main(String[] args) throws Exception {
+            Stream.generate(new LocalDataSupplier()).limit(31)
+                    .filter(d -> d.getDayOfWeek() == DayOfWeek.SATURDAY || d.getDayOfWeek() == DayOfWeek.SUNDAY)
+                    .forEach(System.out::println);
+        }
+    }
+    
+    class LocalDataSupplier implements Supplier<LocalDate> { // 从2020.11.1开始，每次返回一天
+        int n = -1;
+        LocalDate start = LocalDate.of(2020, 11, 1);
+    
+        @Override
+        public LocalDate get() {
+            n++;
+            return start.plusDays(n);
+        }
+    }
+    ```
+
+    输出：
+
+    ```cmd
+    2020-11-01
+    2020-11-07
+    2020-11-08
+    2020-11-14
+    2020-11-15
+    2020-11-21
+    2020-11-22
+    2020-11-28
+    2020-11-29
+    ```
+
+    
+
+### 使用 reduce
+
+`reduce()`操作**首先初始化结果为指定值（这里是0）**，**接着`reduce()`对每个元素依次调用`(acc, n) -> acc + n`**，其中，`acc`是上次计算的结果。`reduce()`方法传入两个参数，第一个是初始值，第二个`BinaryOperator`接口对象，它定义了一个`apply()`方法，负责把上次累记的结果和本次的元素进行运算，并返回新的累计结果
+
+1. `BinaryOperator`接口的定义
+
+    ```java
+    @FunctionalInterface
+    public interface BinaryOperator<T> {
+        // Bi操作：两个输入，一个输出
+        T apply(T t, T u);
+    }
+    ```
+
+2. 实例
+
+    1. 累加
+
+        ```java
+        int sum = Stream.of(1, 2, 3, 4).reduce(0, (acc, n) -> acc + n);
+        System.out.println(sum); // 10
+        ```
+
+    2. 累乘
+
+    3. 把配置文件的信息保存为Map
+
+        ```java
+        // 把配置文件信息转为Map
+        List<String> props = List.of("profile=native", "debug=true", "logging=warn", "interval=500");
+        Map<String, String> map = props.stream()
+            // 把元素从k=v转换为Map[k]=v:
+            .map(kv -> {
+                String[] ss = kv.split("\\=", 2); // 使用正则分割每个元素字符串 转为 字符串数组
+                return Map.of(ss[0], ss[1]);
+                // 把元素组合成一个Map：
+            }).reduce(new HashMap<String, String>(), (m, kv) -> {
+            m.putAll(kv);
+            return m; // Map.putAll 没有返回值 因此需要return返回
+        });
+        map.forEach((k, v) -> { // 输出Map
+            System.out.println(k + "=" + v);
+        });
         ```
 
         输出：
 
         ```cmd
-        APPLE
-        PEAR
-        ORANGE
-        BANANA
+        logging=warn
+        interval=500
+        debug=true
+        profile=native
         ```
 
-        
+
+
+### 使用 sorted 排序
+
+```java
+List<String> list = List.of("Orange", "apple", "Banana").stream().sorted(String::compareToIgnoreCase)
+                .collect(Collectors.toList());
+```
+
+- sorted() 方法可以接收 Comparator 对象的 `compare()` 方法指定排序方式
+
+
+
+### 使用 distinct 去重
+
+```java
+List.of("A", "B", "A", "C", "B", "D")
+    .stream()
+    .distinct()
+    .collect(Collectors.toList()); // [A, B, C, D]
+```
+
+
+
+### 使用 limit 截取&使用 skip 跳过
+
+>  使用 limit() 方法把无限的`Stream`转换成有限的`Stream`，即截取当前`Stream`最多前N个元素；使用`skip()`用于跳过当前`Stream`的前N个元素
+
+```java
+List.of("A", "B", "C", "D", "E", "F")
+    .stream()
+    .skip(2) // 跳过A, B
+    .limit(3) // 截取C, D, E
+    .collect(Collectors.toList()); // [C, D, E]
+```
+
+- 注：**截取操作也是一个转换操作**，将返回新的`Stream`
+
+
+
+### 使用 concat 合并
+
+> 静态方法 `Stream.concat(Stream, Stream)`  可将两个 Stream 合并为一个
+
+```java
+Stream<String> s1 = List.of("A", "B", "C").stream();
+Stream<String> s2 = List.of("D", "E").stream();
+// 合并:
+Stream<String> s = Stream.concat(s1, s2);
+System.out.println(s.collect(Collectors.toList())); // [A, B, C, D, E]
+```
+
+
+
+### 使用 flatMap 合并
+
+如果现在有个 `Stream`，其元素是一个集合类：
+
+```java
+Stream<List<Integer>> s = Stream.of(
+    Arrays.asList(1, 2, 3),
+    Arrays.asList(4, 5, 6),
+    Arrays.asList(7, 8, 9));
+```
+
+使用 `flatMap()`合并，是指把`Stream`的每个元素（这里是`List`）映射为`Stream`，然后合并成一个新的`Stream`：
+
+```cmd
+┌─────────────┬─────────────┬─────────────┐
+│┌───┬───┬───┐│┌───┬───┬───┐│┌───┬───┬───┐│
+││ 1 │ 2 │ 3 │││ 4 │ 5 │ 6 │││ 7 │ 8 │ 9 ││
+│└───┴───┴───┘│└───┴───┴───┘│└───┴───┴───┘│
+└─────────────┴─────────────┴─────────────┘
+                     │
+                     │flatMap(List -> Stream)
+                     │
+                     │
+                     ▼
+   ┌───┬───┬───┬───┬───┬───┬───┬───┬───┐
+   │ 1 │ 2 │ 3 │ 4 │ 5 │ 6 │ 7 │ 8 │ 9 │
+   └───┴───┴───┴───┴───┴───┴───┴───┴───┘
+```
+
+
+
+实例：
+
+```java
+Stream<List<Integer>> s = Stream.of(
+	Arrays.asList(1, 2, 3),
+	Arrays.asList(4, 5, 6),
+	Arrays.asList(7, 8, 9));
+)        
+Stream<Integer> i = s.flatMap(list -> list.stream()); // flatMap 合并
+```
+
+
+
+### 使用 parallel 进行并行
+
+通常情况下，对`Stream`的元素进行处理是单线程的，即一个一个元素进行处理。在元素数量非常大的情况，并行处理可以大大加快处理速度。
+
+把一个普通`Stream`转换为可以并行处理的`Stream`非常简单，只需要用`parallel()`进行转换：
+
+```java
+Stream<String> s = ...
+String[] result = s.parallel() // 变成一个可以并行处理的Stream
+                   .sorted() // 可以进行并行排序
+                   .toArray(String[]::new);
+```
+
+
+
+## 将Stream转为集合类
+
+### 输出 List
+
+> 使用 Stream 的 collect() 方法，传入 Collectors.toList() 方法作为参数
+
+实例：过滤空字符串，输出为List
+
+```java
+Stream<String> stream = Stream.of("Apple", "", null, "Pear", "  ", "Orange");
+List<String> ls = stream.filter(str -> str != null && !str.isBlank()).collect(Collectors.toList()); //
+```
+
+
+
+### 输出 Array
+
+```java
+List<String> list = List.of("Apple", "Banana", "Orange");
+String[] arr = list.stream().toArray(String[]::new);
+```
+
+- `toArray()` 方法接收 IntFunction 接口对象，它的定义如下：
+
+    ```java
+    @FunctionalInterface
+    public interface IntFunction<R> {
+        R apply(int value);
+    }
+    ```
+
+    
+
+###   输出 Map
+
+> 使用 Stream 的 collect() 方法，传入 Collectors.toMap() 方法作为参数，需要分别把元素映射为key和value
+
+```java
+Stream<String> stream = Stream.of("APPL:Apple", "MSFT:Microsoft");
+Map<String, String> map = stream.collect(Collectors.toMap(
+    // 把元素s映射为key:
+    s -> s.substring(0, s.indexOf(':')),
+    // 把元素s映射为value:
+    s -> s.substring(s.indexOf(':') + 1)));
+```
+
+- `String String.substring(int beginIndex, int endIndex)`：返回索引是 beginIndex~endIndex-1 之间的子串
+- `String String.substring(int beginIndex)`：返回索引是 beginIndex 到字符串结束的子串
+
+
+
+### 分组输出
+
+> 使用 Stream 的 collect() 方法，传入 Collectors.groupingBy() 作为参数，该方法接收两个参数，第一个用于指定组别，第二个是要输出的类型。
+
+实例：按照首字母输出 List
+
+```java
+List<String> list = List.of("Apple", "Banana", "Blackberry", "Coconut", "Avocado", "Cherry", "Apricots");
+Map<String, List<String>> groups = list.stream()
+    .collect(Collectors.groupingBy(s -> s.substring(0, 1), Collectors.toList())); // 第二个参数接收的是Collectors.toList()方法 表示输出List
+System.out.println(groups);
+```
+
+输出：
+
+```cmd
+{A=[Apple, Avocado, Apricots], B=[Banana, Blackberry], C=[Coconut, Cherry]}
+```
 
 
 
@@ -375,5 +672,12 @@ A：
     - 符合方法签名的静态方法、实例方法（实例类型被看做第一个参数类型）、构造方法（实例类型被看做返回类型）
 2. Stream API
     1. 基本用法就是：创建一个`Stream`，然后做若干次转换，最后调用一个求值方法获取真正计算的结果
-    2. 
+    2. **`Stream`提供的常用操作**有：
+        - 转换操作：`map()`，`filter()`，`sorted()`，`distinct()`；
+        - 合并操作：`concat()`，`flatMap()`；
+        - 并行处理：`parallel()`；
+        - 聚合操作：`reduce()`，`collect()`，`count()`，`max()`，`min()`，`sum()`，`average()`；
+        - 其他操作：`allMatch()`, `anyMatch()`, `forEach()`。
+    3. Stream 的操作主要可分为两大类：转换类（如 map、filter）和聚合类（如 reduce）。前一类的操作返回的还是 Stream，而后者会返回具体的 Java类型。
+    4. `Stream`通过`collect()`方法可以方便地输出为、`List`、`Set`、`Map`，还可以分组输出。可以通过 `to.Array()` 方法输出为数组。
 
