--- a/Java-从0开始（基础）/12.反射/反射.md
+++ b/Java-从0开始（基础）/12.反射/反射.md
@@ -142,6 +142,8 @@ is primitive: true
 
 # 动态加载class
 
+>   JVM 加载类的机制比较复杂，深入理解需要一段时间。
+
 JVM动态加载class是指JVM在执行Java程序的时候，并不是一次性把所有用到的class全部加载到内存，而是第一次需要用到class时才加载。
 
 
@@ -193,8 +195,531 @@ boolean isClassPresent(String name) { // 动态加载时有Log4j时返回true，
 
 
 
+# 反射API的使用
+
+## 通过反射访问字段
+
+每个字段具有对应的 `Class` 实例，通过该`Class` 的方法又可获得 `Field` 实例，借助`Field` 实例可以读写字段：
+
+-   读：读取字段
+-   写：设置字段的值，对于具有访问限制的可以调用`setAccessible(true)`来访问非`public`字段
+
+
+
+### 获取 Field
+
+**Q：通过Class获取字段的主要流程？**
+
+A：
+
+1.  获取 class 的 `Class` 实例
+2.  使用 `Class` 实例的方法获取 class 的字段（返回内容是字段的签名：包含限定修饰符、类型、字段名），这些方法主要有：
+    1.  `Field Class.getField(name)`：根据字段名获取某个public的field（包括父类）
+    2.  `Field Class.getDeclaredField(name)`：根据字段名获取当前类的某个field（不包括父类）
+    3.  `Field[] Class.getFields()`：获取所有public的field（包括父类）
+    4.  `Field[] Class.getDeclaredFields()`：获取当前类的所有field（不包括父类）
+
+
+
+实例：
+
+```java
+public class App {
+    public static void main(String[] args) throws Exception {
+        Class stdClass = Student.class;
+        // 获取public字段"score":
+        System.out.println(stdClass.getField("score")); // 根据名称获取类的字段（包含父类）
+        // 获取继承的public字段"name":
+        System.out.println(stdClass.getField("name")); // 根据名称获取类的字段（包含父类）这里name就是从父类的继承的字段
+        // 获取private字段"grade":
+        System.out.println(stdClass.getDeclaredField("grade")); // 根据名称获取类的字段（不含父类）
+    }
+}
+
+class Student extends Person {
+    public int score;
+    private int grade;
+}
+
+class Person {
+    public String name;
+}
+```
+
+输出：
+
+```cmd
+public int Student.score
+public java.lang.String Person.name
+private int Student.grade
+```
+
+分析：
+
+1.  通过反射的机制（即调用 `Class` 实例的相关方法）可以获取对应 class 的字段（私有和公有都可以访问）以及该 class 父类的公有字段（只有这样才能通过子类的 Class 实例访问到）。
+
+
+
+### 通过 Field 获取字段的信息
+
+Q：如何通过 Field 获取字段的信息（不含值）？
+
+A：Field 提供了一些方法可以返回字段的信息，例如
+
+-   `getName()`：返回字段名称，例如，`"name"`；
+-   `getType()`：返回字段类型，也是一个`Class`实例，例如，`String.class`；
+-   `getModifiers()`：返回字段的修饰符，它是一个`int`，不同的bit表示不同的含义
+
+
+
+实例：
+
+```java
+import java.lang.reflect.Field;
+import java.lang.reflect.Modifier;
+
+public class App {
+    public static void main(String[] args) throws Exception {
+        Class stdClass = Student.class;
+        
+        // 获取Field的信息
+        Field f = stdClass.getDeclaredField("grade"); // 注意：这里使用getField方法会抛出异常
+        System.out.println(f.getName()); // grade
+        System.out.println(f.getType()); // int
+        int m = f.getModifiers();
+        System.out.println(m); // 18
+        System.out.println(Modifier.isAbstract(m)); // false
+        System.out.println(Modifier.isStatic(m)); // false
+        System.out.println(Modifier.isFinal(m)); // true
+        System.out.println(Modifier.isPrivate(m)); // true
+    }
+}
+
+class Student extends Person {
+    public int score;
+    private final int grade = 1;
+}
+
+class Person {
+    public String name;
+}
+
+```
+
+
+
+---
+
+Q：如何获取字段的值？
+
+A：使用`Field.get(Object)`获取指定实例（即参数 Object）的公有字段的值。如果想访问私有字段，可以在调用该方法前加上：
+
+```java
+f.setAccessible(true);
+```
+
+
+
+实例：
+
+```java
+import java.lang.reflect.Field;
+import java.lang.reflect.Modifier;
+
+public class App {
+    public static void main(String[] args) throws Exception {
+        // 使用Field访问字段的值
+        Object p = new Person("luyao");
+        Class c = p.getClass();
+        Field f = c.getDeclaredField("name");
+        f.setAccessible(true); // 访问私有字段的值需要获取权限
+        Object value = f.get(p); // 获取字段的值
+        System.out.println(value); // luyao
+    }
+}
+
+class Person {
+    private String name;
+
+    public Person(String name) {
+        this.name = name;
+    }
+}
+
+```
+
+-   反射可以获取到字段的值，因此会破坏类的封装特性。
+-   访问私有字段需要启动权限（`Field.setAccessible(true)`），但是这有可能失败。JVM运行期存在`SecurityManager`，那么它会根据规则进行检查，有可能阻止`setAccessible(true)`。例如，某个`SecurityManager`可能不允许对`java`和`javax`开头的`package`的类调用`setAccessible(true)`，这样可以保证JVM核心库的安全。
+
+
+
+### 通过 Field 设置字段的值
+
+Q：如何设置字段的值？
+
+A：通过`Field.set(Object, Object)` 设置字段的值，其中第一个`Object`参数是指定的实例，第二个`Object`参数是待修改的值。如果想访问私有字段，可以在调用该方法前加上：
+
+```java
+f.setAccessible(true);
+```
+
+
+
+实例：
+
+```java
+public class Main {
+    public static void main(String[] args) throws Exception {
+        Person p = new Person("Xiao Ming");
+        System.out.println(p.getName()); // "Xiao Ming"
+        Class c = p.getClass();
+        Field f = c.getDeclaredField("name");
+        f.setAccessible(true);
+        f.set(p, "Xiao Hong");
+        System.out.println(p.getName()); // "Xiao Hong"
+    }
+}
+
+class Person {
+    private String name;
+
+    public Person(String name) {
+        this.name = name;
+    }
+
+    public String getName() {
+        return this.name;
+    }
+}
+```
+
+
+
+## 通过反射访问方法
+
+>   反射访问方法的API很类似访问字段的API
+
+每个方法具有对应的 `Class` 实例，通过该`Class` 的方法又可获得 `Method` 实例，借助`Method` 实例可以：
+
+-   获取方法的信息
+-   调用某个对象的方法
+
+
+
+### 获取 Method
+
+**Q：通过Class获取字段的主要流程？**
+
+A：
+
+1.  获取 class 的 `Class` 实例
+2.  使用 `Class` 实例的方法获取 class 的方法（返回内容是字段的签名：包含限定修饰符、返回值类型、参数列表、方法名），这些方法主要有：
+    1.  `Method getMethod(name, Class...)`：获取某个`public`的`Method`（包括父类）
+    2.  `Method getDeclaredMethod(name, Class...)`：获取当前类的某个`Method`（不包括父类）
+    3.  `Method[] getMethods()`：获取所有`public`的`Method`（包括父类）
+    4.  `Method[] getDeclaredMethods()`：获取当前类的所有`Method`（不包括父类）
+
+
+
+实例：
+
+```java
+public class App {
+    public static void main(String[] args) throws Exception {
+        Class stdClass = Student.class;
+        // 获取public方法getScore，参数为String:
+        System.out.println(stdClass.getMethod("getScore", String.class, int[].class));
+        // 获取继承的public方法getName，无参数:
+        System.out.println(stdClass.getMethod("getName"));
+        // 获取private方法getGrade，参数为int:
+        System.out.println(stdClass.getDeclaredMethod("getGrade", int.class));
+
+    }
+}
+
+class Student extends Person {
+    public int getScore(String type, int[] array) {
+        return 99;
+    }
+
+    private int getGrade(int year) {
+        return 1;
+    }
+}
+
+class Person {
+    public String getName() {
+        return "Person";
+    }
+}
+```
+
+
+
+
+
+### 通过 Method 获取方法的信息
+
+Q：如何通过 Field 获取方法的信息？
+
+A：Field 提供了一些方法可以返回方法的信息，例如
+
+-   `getName()`：返回方法名称，例如：`"getScore"`；
+-   `getReturnType()`：返回方法返回值类型，也是一个Class实例，例如：`String.class`；
+-   `getParameterTypes()`：返回方法的参数类型，是一个Class数组，例如：`{String.class, int.class}`；
+-   `getModifiers()`：返回方法的修饰符，它是一个`int`，不同的bit表示不同的含义。
+
+
+
+### 通过 Method 调用方法
+
+Q：如何通过 Method 调用**实例方法**？
+
+A：使用 `Object Method.invoke(Object, Object...)`方法，第一个参数是调用该方法的底层实例对象，之后的可变参数是方法的实参列表。返回的对象是方法的执行结果，可以按照需求进行强制转型。
+
+注：调用非 public 方法，需要在调用前（即使用 `invoke`方法前）加上 `Method.setAccessible(true)` 允许其调用
+
+
+
+实例：
+
+```java
+// 利用反射调用方法
+String s = "Hello";
+Method m = s.getClass().getMethod("substring", int.class); // 获取String实例s的Class实例的substring方法对应的Method
+String subString = (String)m.invoke(s, 1);
+System.out.println(subString); // ello
+```
+
+-   这里调用的是 String 的 `substring` 方法，该方法接受一个整数索引 index，返回 index开始到字符串结束的所有字符作为一个子串。
+
+
+
+---
+
+Q：如何通过 Method 调用**静态方法**？
+
+A：使用 `Object Method.invoke(null, Object...)`方法，由于静态方法无需指定实例对象，因此第一个参数永远是 null，之后的可变参数是方法的实参列表。返回的对象是方法的执行结果，可以按照需求进行强制转型。
+
+
+
+实例：
+
+```java
+// 利用反射调用静态方法
+// 获取Integer.parseInt(String)方法，参数为String:
+Method m = Integer.class.getMethod("parseInt", String.class);
+// 调用该静态方法并获取结果:
+Integer n = (Integer) m.invoke(null, "12345");
+// 打印调用结果:
+System.out.println(n);
+```
+
+
+
+---
+
+Q：如何通过 Method 调用**构造方法**（如何通过反射创建实例）？
+
+A：有两种办法
+
+1.  直接调用 Class 提供的 `newInstance()` 静态方法：缺点是只能调用类的无参数构造方法
+2.  先通过 class 的 Class 实例获得 Constructor 对象，然后调用其 `newInstance()` 方法：可以弥补方法1的缺陷，调用类的任意的构造方法
+    -   获取 Constructor 对象的方法有以下几种
+        -   `getConstructor(Class...)`：获取某个`public`的`Constructor`；
+        -   `getDeclaredConstructor(Class...)`：获取某个`Constructor`；
+        -   `getConstructors()`：获取所有`public`的`Constructor`；
+        -   `getDeclaredConstructors()`：获取所有`Constructor`
+    -   注：
+        -   Constructor 总是当前类定义的构造方法，和父类无关，因此不存在多态的问题
+        -   调用非`public`的 Constructor 时，必须首先通过`setAccessible(true)`设置允许访问。`setAccessible(true)`可能会失败
+
+
+
+实例：通过 Constructor 调用构造方法
+
+```java
+import java.lang.reflect.Constructor;
+
+public class App {
+    public static void main(String[] args) throws Exception {
+        // 获取构造方法Integer(int):
+        Constructor cons1 = Integer.class.getConstructor(int.class);
+        // 调用构造方法:
+        Integer n1 = (Integer) cons1.newInstance(123);
+        System.out.println(n1); // 123
+
+        // 获取构造方法Integer(String)
+        Constructor cons2 = Integer.class.getConstructor(String.class);
+        Integer n2 = (Integer) cons2.newInstance("456"); // 456
+        System.out.println(n2);
+    }
+}
+```
+
+
+
+
+
+---
+
+>   使用**反射调用方法时，仍然遵循多态原则**：即总是调用实际类型的覆写方法（如果存在）
+
+Q：一个`Person`类定义了`hello()`方法，并且它的子类`Student`也覆写了`hello()`方法，那么，从`Person.class`获取的`Method`，作用于`Student`实例时，调用的方法到底是哪个？
+
+A：调用的是 `Student` 实例在覆写了的 `hello()` 方法
+
+
+
+测试：
+
+```java
+import java.lang.reflect.Method;
+
+public class App {
+    public static void main(String[] args) throws Exception {
+        // 获取Person的hello方法:
+        Method h = Person.class.getMethod("hello");
+        // 对Student实例调用hello方法:
+        h.invoke(new Student());
+    }
+}
+
+class Person {
+    public void hello() {
+        System.out.println("Person:hello");
+    }
+}
+
+class Student extends Person {
+    public void hello() {
+        System.out.println("Student:hello");
+    }
+}
+```
+
+输出：
+
+```cmd
+Student:hello
+```
+
+
+
+## 通过反射获取继承关系
+
+### 获取父类的Class实例
+
+Q：已知一个类对应的 Class 实例，如何获取其父类的 Class 实例？
+
+A：当前类的 Class 实例提供的 `Class getSuperclass()` 方法可以获取其父类的 Class 实例，这些方法有：
+
+
+
+实例：获取 Integer 类的 Class 实例
+
+```java
+public class App {
+    public static void main(String[] args) throws Exception {
+        Class i = Integer.class;
+        Class n = i.getSuperclass();
+        System.out.println(n); // class java.lang.Number
+        Class o = n.getSuperclass();
+        System.out.println(o); // class java.lang.Object
+        System.out.println(o.getSuperclass());// null
+    }
+}
+```
+
+-   可以看出，Integer 的父类是 Number，Number 的父类是 Object，Object 没有父类，因此返回 null
+
+
+
+### 获取实现的Interface的Class实例
+
+Q：已知一个类对应的 Class 实例，如何获取改类实现的所有接口？
+
+A：当前类的 Class 实例提供的 `Class getInterfaces()` 方法可以获取该类实现的所有接口，以 `Class[]` 形式返回
+
+
+
+实例：获取 Integer 实现的所有接口
+
+```java
+Class n = Integer.class;
+Class[] ls = n.getInterfaces(); // 返回所有实现的接口
+for (Class i : ls) { // 输出所有实现的接口
+	System.out.println(i);
+}
+```
+
+输出：
+
+```cmd
+interface java.lang.Comparable
+interface java.lang.constant.Constable
+interface java.lang.constant.ConstantDesc
+```
+
+
+
+### 获取接口的父类的Class实例
+
+Q：已知接口的 Class 实例，如何获取其父类的 Class 实例？
+
+A：获取接口的父接口的 Class 实例要用`getInterfaces()`
+
+-   注：对所有`interface`的`Class`调用`getSuperclass()`返回的是`null`
+
+
+
+实例：
+
+```java
+System.out.println(java.util.List.class.getSuperclass()); // null List继承的是接口 因此getSuperclass方法返回为null
+Class ls[] = java.util.List.class.getInterfaces(); 
+for (Class c : ls) {
+    System.out.println(c); // interface java.util.Collection
+}
+```
+
+
+
+### 判断两个Class实例是否可以转型
+
+对于两个`Class`实例，要判断一个向上转型是否成立，可以调用`isAssignableFrom()`。
+
+
+
+实例：
+
+```java
+System.out.println(Integer.class.isAssignableFrom(Integer.class)); // true Integer是否可以赋值给Integer
+System.out.println(Number.class.isAssignableFrom(Integer.class)); // true Integer是否可以赋值给Number
+System.out.println(Object.class.isAssignableFrom(Integer.class)); // true Integer是否可以赋值给Object
+System.out.println(Integer.class.isAssignableFrom(Number.class)); // false Number是否可以赋值给Integer
+```
+
+
+
+# 动态代理
+
+
+
 # 小结
 
--   JVM为每个加载的`class`及`interface`创建了对应的`Class`实例来保存`class`及`interface`的所有信息
--   反射（Reflection）：通过 `Class` 实例获取 `class` 信息的方法
--   JVM总是动态加载`class`，可以在运行期根据条件来控制加载class
+-   反射的基础
+    -   JVM为每个加载的 class 及`interface`创建了对应的 Class 实例来保存 class 及 interface 的所有信息
+    -   **反射（Reflection）的概念**：通过 Class 实例获取  class  信息的方法
+    -   JVM总是动态加载 class，可以在运行期根据条件来控制加载class
+    -   class 与 Class 实例是一一对应的关系，class 的实例与 Class 实例是多对一的关系
+-   通过反射访问字段
+    -   Class 实例提供了一些方法，可以传入字段名，返回获得对应的 Field 实例
+    -   通过 Field 实例提供的方法可以获取字段的信息、获取或设置字段的值。访问私有字段需要启动权限。
+    -   通过反射读写字段是一种非常规方法，它会破坏对象的封装
+-   通过反射调用方法
+    -   Class 实例提供了一些方法，可以传入方法名和参数类型列表，返回获得对应的 Method 实例
+    -   通过 Method 实例提供的方法可以获取方法的信息以及调用方法（包括实例方法和静态方法）。访问私有方法需要启动权限。
+    -   通过返回调用方法依然遵循多态性，即总是调用实例类型（作为参数传入 invoke 方法的实例）的重写方法（如果有）。
+    -   通过 Class 实例可以获得 Constructor 对象，通过该对象可以调用类的任意构造方法。
+
